# visionstudio

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  THIRD_PARTY_LICENSES.txt  camera_config_a.json  camera_config_b.json  imgui.ini  test_overlay.json  test_overlay.jsonl  vcpkg.json  visionstudio.json
.claude/: settings.json  settings.local.json
.zed/: debug.json
api/: app.rc.in  main.cpp
capture/: capture_cli_main.cpp  capture_client.cpp  capture_client.h  capture_config.cpp  capture_config.h
capture_rs/: Cargo.toml  capture_rs.h
capture_rs/src/: lib.rs
gui/: app_context.h  app_types.h  capture_panel.cpp  capture_panel.h  circle_ellipse_tool.cpp  circle_ellipse_tool.h  compare_viewer.cpp  compare_viewer.h  image_viewer.cpp  image_viewer.h  log_panel.h  measure_tool.cpp  measure_tool.h  overlay_graph_panel.cpp  overlay_graph_panel.h  panel_base.h  profile_panel.cpp  profile_panel.h  remote_overlay_tool.cpp  remote_overlay_tool.h  viewer_context.h
io/: jsonl_io.cpp  jsonl_io.h  overlay_io.cpp  overlay_io.h  tiff_io.cpp  tiff_io.h
packaging/: wix_shortcuts.xml  wix_ui_no_license.wxs
test/: mock_camera_server.cpp
tools/: test_capture_server.py  tiff_to_gray.cpp
util/: analysis_tool.h  async_loader.h  capture_config.cpp  capture_config.h  config_tab.h  image_data.h  roi_data.h
